fix & spotless